[package]
name = "papercut"
version = "0.1.0"
edition = "2024"


# Add metadata
description = "A library and CLI tool for slicing and joining images."
authors = ["Orhan Balci <orhanbalci@gmail.com>"]
license = "MIT"
repository = "https://github.com/orhanbalci/papercut"

[dependencies]
image = "0.25.6"


[lib]
name = "papercut"
path = "src/lib.rs"

[[example]]
name = "slice-image"
path = "example/slice_image.rs"

[dev-dependencies]
pico-args = "0.5.0"
