[package]
name = "papercut"
version = "0.1.0"
edition = "2024"


# Add metadata
description = "A library and CLI tool for slicing and joining images."
authors = ["Orhan Balci <orhanbalci@gmail.com>"]
license = "MIT"
repository = "https://github.com/orhanbalci/papercut"
readme = "README.md"
keywords = ["image", "slicing", "tiles", "processing"]
categories = ["graphics", "multimedia", "command-line-utilities"]
homepage = "https://github.com/yourusername/papercut"
documentation = "https://docs.rs/papercut"

[dependencies]
image = "0.25.6"


[lib]
name = "papercut"
path = "src/lib.rs"

[[example]]
name = "slice-image"
path = "example/slice_image.rs"

[dev-dependencies]
pico-args = "0.5.0"
